--- a/Elliot/CSS/estilo-main.css
+++ b/Elliot/CSS/estilo-main.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Montserrat:700,800&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Montserrat:500,700,800&display=swap');
 
 h1{
     font-family: "Montserrat", sans-serif;
@@ -6,6 +6,14 @@ h1{
     color: #315254;
     font-weight:700;
     letter-spacing: 3px;
+}
+
+h2{
+    font-family: "Montserrat", sans-serif;
+    font-size: 22px;
+    color: #315254;
+    font-weight:500;
+    letter-spacing: 0px;
 }
 
 b{
@@ -25,14 +33,21 @@ p{
     padding-top: 10px;
     padding-bottom: 10px;
     background-color: #315254;
+    border-color: #315254;
     color:white;
     font-size: 18px;
-    border-radius: 0px;;
+    border-radius: 0px;
+    font-weight:500;
 }
 
 .btn:hover {
     color: white;
     background-color: #F25C5C;
+    border-color: #F25C5C;
+    font-family: "Montserrat", sans-serif;
+    font-size: 18px;
+    font-weight:500;
+    
 }
 
 .logo-menu{
@@ -160,6 +175,24 @@ a:hover{
     letter-spacing: 1.5px;
     text-decoration: none;
 }
+
+.form-control-lg {
+    border-radius: 0px;
+    border-color: #315254;
+}
+
+.form-label{
+    color: #F25C5C;
+}
+
+.side-menu{
+   
+    margin-top: 50px;
+    margin-bottom: 50px;
+    background-color:#315254;
+    border-radius:15px;
+}
+
 
 @media (min-width: 700px){
 
