--- a/Elliot/CSS/estilo-main.css
+++ b/Elliot/CSS/estilo-main.css
@@ -1,72 +1,66 @@
-@import url('https://fonts.googleapis.com/css?family=Montserrat:500,700,800&display=swap');
-h1 {
+@import url('https://fonts.googleapis.com/css?family=Montserrat:700,800&display=swap');
+
+h1{
     font-family: "Montserrat", sans-serif;
     font-size: 50px;
     color: #315254;
-    font-weight: 700;
+    font-weight:700;
     letter-spacing: 3px;
 }
 
-h2 {
-    font-family: "Montserrat", sans-serif;
-    font-size: 22px;
+h2{
+    font-family: "Quicksand", sans-serif;
+    font-size: 30px;
     color: #315254;
-    font-weight: 500;
-    letter-spacing: 0px;
+    font-weight:700;
 }
 
-b {
+b{
     color: #F25C5C;
 }
 
-p {
+p{
     font-family: "Montserrat", sans-serif;
     font-size: 18px;
     color: #315254;
 }
 
-.btn {
+.btn{
     font-family: "Montserrat", sans-serif;
     padding-right: 40px;
     padding-left: 40px;
     padding-top: 10px;
     padding-bottom: 10px;
     background-color: #315254;
-    border-color: #315254;
-    color: white;
+    color:white;
     font-size: 18px;
-    border-radius: 0px;
-    font-weight: 500;
+    border-radius: 0px;;
 }
 
 .btn:hover {
     color: white;
     background-color: #F25C5C;
-    border-color: #F25C5C;
-    font-family: "Montserrat", sans-serif;
-    font-size: 18px;
-    font-weight: 500;
 }
 
-.logo-menu {
-    max-width: 80px;
+.logo-menu{
+    max-width:80px;
     margin-right: 10px;
     margin-left: 180px;
     display: inline;
     vertical-align: middle;
 }
 
-.texto-logo {
-    display: inline;
-    color: #fff;
-    font-size: 18px;
-    font-weight: bold;
-    font-family: "Quicksand", sans-serif;
-    letter-spacing: 1.5px;
+.texto-logo{
+   display: inline; 
+   color: #fff;
+   font-size: 18px;
+   font-weight: bold;
+   font-family: "Quicksand", sans-serif;
+   letter-spacing: 1.5px;
 }
 
-#texto-botones {
-    display: inline;
+#texto-botones{
+    display: inline; 
     color: #fff;
     font-size: 18px;
     font-weight: normal;
@@ -94,10 +88,10 @@ p {
     display: inline-block;
     vertical-align: middle;
     color: #fff;
-    font-size: 18px;
-    font-weight: normal;
-    font-family: "Quicksand", sans-serif;
-    letter-spacing: 1.5px;
+   font-size: 18px;
+   font-weight: normal;
+   font-family: "Quicksand", sans-serif;
+   letter-spacing: 1.5px;
 }
 
 .navbar-brand {
@@ -110,12 +104,12 @@ p {
     padding-right: 40px;
 }
 
-.login {
+.login{
     display: inline-flex;
     margin-right: 40px;
 }
 
-#separador {
+#separador{
     border-right-color: #F25C5C;
     border-width: 3px;
     border-top-color: #315254;
@@ -125,17 +119,17 @@ p {
     padding-right: 40px;
 }
 
-.img-border {
+.img-border{
     border: 3px solid rgb(0, 0, 0);
 }
 
-#texto-titulo {
+#texto-titulo{
     font-family: "Montserrat", sans-serif;
     font-size: 25px;
     color: #315254;
 }
 
-#container-fondo {
+#container-fondo{
     background-size: cover;
     padding-top: 50px;
     padding-bottom: 50px;
@@ -143,7 +137,9 @@ p {
     margin-bottom: 100px;
 }
 
-.footer {
+
+.footer
+{
     height: 50px;
     background-color: black;
     position: absolute;
@@ -152,8 +148,8 @@ p {
     width: 100%;
 }
 
-a {
-    display: inline;
+a{
+    display: inline; 
     color: #315254;
     font-size: 18px;
     font-weight: bold;
@@ -162,8 +158,8 @@ a {
     text-decoration: none;
 }
 
-a:hover {
-    display: inline;
+a:hover{
+    display: inline; 
     color: #F25C5C;
     font-size: 18px;
     font-weight: bold;
@@ -172,20 +168,63 @@ a:hover {
     text-decoration: none;
 }
 
-.form-control-lg {
-    border-radius: 0px;
-    border-color: #315254;
-}
-
-.form-label {
-    color: #F25C5C;
-}
-
-.side-menu {
-    margin-top: 50px;
-    margin-bottom: 50px;
-    background-color: #315254;
-    border-radius: 15px;
-}
-
-@media (min-width: 700px) {}
+  
+  .pricing .card {
+    border: none;
+    border-radius: 1rem;
+    transition: all 0.2s;
+    box-shadow: 0 0.5rem 1rem 0 rgba(0, 0, 0, 0.1);
+    background-color: #fdfcf7;
+  }
+  
+  .pricing hr {
+    margin: 1.5rem 0;
+  }
+  
+  .pricing .card-title {
+    margin: 0.5rem 0;
+    font-size: 0.9rem;
+    letter-spacing: .1rem;
+    font-weight: bold;
+  }
+  
+  .pricing .card-price {
+    font-size: 3rem;
+    margin: 0;
+  }
+  
+  .pricing .card-price .period {
+    font-size: 0.8rem;
+  }
+  
+  .pricing ul li {
+    margin-bottom: 1rem;
+  }
+  
+  .pricing .text-muted {
+    opacity: 0.7;
+  }
+  
+  .pricing .btn {
+    font-size: 80%;
+    border-radius: 5rem;
+    letter-spacing: .1rem;
+    font-weight: bold;
+    padding: 1rem;
+    opacity: 0.7;
+    transition: all 0.2s;
+  }
+  
+  /* Hover Effects on Card */
+  
+  @media (min-width: 992px) {
+    .pricing .card:hover {
+      margin-top: -.25rem;
+      margin-bottom: .25rem;
+      box-shadow: 0 0.5rem 1rem 0 rgba(0, 0, 0, 0.3);
+    }
+  
+    .pricing .card:hover .btn {
+      opacity: 1;
+    }
+  }
